test/invalid/aug_assign_non_numeric.py
# Augmented assignment on non-numeric types
def main() -> None:
    x: str = "hello"
    x += 5
    print(x)
